<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <array name="build_filters">
        <item>Success</item>
        <item>Failed</item>
        <item>Failed due server error</item>
        <item>Cancelled</item>
        <item>Failed to start</item>
        <item>Running</item>
        <item>Queued</item>
    </array>
</resources>